--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <nav class="navbar navbar-fixed-top">
         <div class="col-sm-4 brand-container">
-          <a href="#" class="navbar-brand">Zacznij wolno w IT: Warsztaty JavaScript</a>
+          <a href="#" class="navbar-brand">Zacznij w IT: Warsztaty JavaScript</a>
         </div>
         <div class="collapse navbar-collapse col-sm-8">
           <ul class="nav navbar-nav nav-list">
@@ -103,7 +103,7 @@
             <img src="./images/services-4-240x194.png" alt="img">
           </div>
           <div class="col-sm-6">
-            <ul class="slider">
+            <ul class="slider visible">
               <li class="org visible">
                 <h5>Kasia</h5>
                 <p>
@@ -149,8 +149,10 @@
     </div>
     <footer>
       <div class="col-sm-4">
+        <button class="new-btn">Wróć na górę</button>
         <p>Copyrights 2018 | All rights reserved Coders Lab</p>
       </div>
     </footer>
   </body>
+  <script src="js/app.js"> </script>
 </html>
